--- a/styles/variables.css
+++ b/styles/variables.css
@@ -8,5 +8,6 @@
   --bg-image: url(../images/cover-image-dark.png);
   --bg-color: #000028;
   --accent-color: #FF0070;
-  --title-decor: #DB00FF; 
+  --title-decor: #DB00FF;
+  --text-color: #F1B2CE; 
 }
