--- a/styles/dark.css
+++ b/styles/dark.css
@@ -9,4 +9,12 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-image: url(../images/cover-image-dark.png);
+  --bg-color: #000028;
+  --accent-color: #FF0070;
+  --title-decor: #DB00FF;
+  --text-color: #F1B2CE; 
+  --title-text-color: #000028;
+  --section-title-color: #FF0070;
+  --corner-color: #FF0070;
 }
