--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,29 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --bg-image: url(../images/cover-image-light.png);
+  --bg-color: #FFF1F7;
+  --accent-color: #FF8DCB;
+  --title-decor: #FFC2E6;
+  --text-color: #353430; 
+  --title-text-color: #353430;
+  --section-title-color: #353430;
+  --corner-color: #353430;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+  --bg-image: url(../images/cover-image-light.png);
+  --bg-color: #FFF1F7;
+  --accent-color: #FF8DCB;
+  --title-decor: #FFC2E6;
+  --text-color: #353430;
+  --title-text-color: #353430;
+  --section-title-color: #353430;
+  --corner-color: #353430;
+  }
+
+  .rec {
+    display: none;
+  }
 }
