--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
   font-size: 18px;
   font-family: 'IBM Plex mono';
   min-block-size: 100vh;
-  padding: 0 10px;
+  padding-inline: 10px;
 }
 
 .header {
@@ -18,7 +18,6 @@
   min-block-size: 668px;
   display: grid;
   grid-template-rows: 1fr min-content 1fr;
-  justify-content: center;
   position: relative;
 }
 
@@ -38,23 +37,19 @@
   background-color: transparent;
   font-size: inherit;
   font-weight: 400;
+  line-height: 18px;
   border: none;
   text-transform: lowercase;
-  color: var(--accent-color);
+  color: var(--corner-color);
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  inline-size: 100%;
+  inline-size: 70px;
+  block-size: 26px;
 }
 
 .header__theme-menu-button_active {
-  border: 1px solid var(--accent-color);
-}
-
-.header__theme-menu {
-  grid-row: 1;
-  font-size: inherit;
-  justify-self: flex-end;
+  border: 1px solid var(--corner-color);
 }
 
 .header__title {
@@ -79,7 +74,7 @@
 .title__decor {
   display: inline-block;
   inline-size: 100%;
-  color: var(--bg-color);
+  color: var(--title-text-color);
   background-color: var(--accent-color);
   font-size: inherit;
 }
@@ -91,16 +86,10 @@
   font-size: inherit;
 }
 
-@media (width >= 768px) {
-  .header__title {
-    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
-  }
-}
-
 .rec {
   position: absolute;
-  top: 10px;
-  right: 9px; /* Вычитаем 10px, тк это паддинг сбоку для всей страницы */
+  inset-block-start: 10px;
+  inset-inline-end: 9px; /* Вычитаем 10px, тк это паддинг сбоку для всей страницы */
   font-size: inherit;
   font-weight: 400;
   line-height: 25px;
@@ -119,6 +108,10 @@
   box-shadow: 0 0 4px 2px var(--accent-color);
 }
 
+.theme-light .rec { /*скрываем надпись в светлой теме*/
+  display: none;
+}
+
 .corner {
   position: absolute;
   inline-size: 25px;
@@ -130,12 +123,12 @@
   position: absolute;
   inline-size: 100%;
   block-size: 100%;
-  border: 1px solid var(--accent-color);
+  border: 1px solid var(--corner-color);
 }
 
 .corner__top-right {
-  top: 10px;
-  right: 0px;
+  inset-block-start: 10px;
+  inset-inline-end: 0px;
 }
 
 .corner__top-right::before{
@@ -144,13 +137,57 @@
 }
 
 .corner__bottom-left {
-  bottom: 10px;
-  left: 0px;
+  inset-block-end: 10px;
+  inset-inline-start: 0px;
 }
 
 .corner__bottom-left::before {
   border-top: none;
   border-right: none;
+}
+
+@media (width >= 768px) { /* Медиазапросы для хедера 768px*/
+  .page {
+    padding-inline: 20px;
+  }
+
+  .header__title {
+    font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+    margin-left: -20px; /* Компенсируем отступ от page*/
+  }
+
+  .header__subtitle-wrapper {
+    inline-size: min(100%, 364px);
+    justify-self: end;
+  }
+
+  .rec {
+    inset-block-start: 20px;
+  }
+
+  .corner__top-right {
+    inset-block-start: 20px;
+    inset-inline-end: 0px;
+  }
+
+  .corner__bottom-left {
+    inset-block-end: 20px;
+    inset-inline-start: 0px;
+  }
+
+}
+
+
+@media (width >= 1024px) { /* Медиазапросы для хедера 1024px*/
+  .header__theme-menu {
+    justify-content: center;
+    align-items: flex-start;
+    padding-block-start: 20px; /*Костыль*/
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
 }
 
 .content-section:first-child {
@@ -162,11 +199,13 @@
 }
 
 .content-section_title {
-  color: var(--accent-color);
+  color: var(--section-title-color);
   font-size: inherit;
   font-weight: bold;
   line-height: 23.4px;
   padding-block-end: 20px;
+  white-space: normal;
+  word-break: break-word;
 }
 
 .content-article__title {
@@ -213,13 +252,13 @@
   display: inline-block;
   inline-size: 100%;
   background-color: var(--accent-color);
-  color: var(--bg-color);
+  color: var(--title-text-color);
   font-weight: 400;
 }
 
-/* .heading__gallery {
-  margin-block-end: 10px;
-} */
+.heading__gallery {
+  margin-block-end: 20px;
+}
 
 .gallery {
   display: grid;
@@ -229,14 +268,68 @@
 }
 
 .gallery img {
-  inline-size: 100%;
+  width: 100%;
+  height: 100%;
   display: block;
   object-fit: cover;
 }
 
+@media (width >= 768px) { /* Медиазапросы для мейна 768px*/
+  .content-section:nth-child(2n + 1) {
+    display: grid;
+    grid-template-columns: fit-content(200px) 2fr; /* фит контент для переноса слов, согласно макету */
+    gap: 20px;
+  }
+
+  .content-section_title {
+    width: clamp(200px, 25vw, 240px); /* Ограничеваем ширину слов для совпадения переноса слов с макетом */
+  }
+
+  .heading__gallery {
+    grid-column: 1 / -1; /* Растягиваем заголовок на всю ширину */
+  }
+
+  .gallery {
+    grid-template-columns: 1fr 1fr 1fr;
+    /* grid-template-rows: repeat(3, 1fr); */
+    grid-auto-flow: dense;
+  }
+
+.gallery img:nth-of-type(1) {
+    grid-column: span 2;   
+    grid-row: 1 / 2;
+  }
+
+  .gallery img:nth-of-type(2) {
+    grid-column: 3;
+    grid-row: span 2; 
+  }
+
+  .gallery img:nth-of-type(3) {
+    grid-row: 2 / 4;
+  }
+
+  .gallery img:nth-of-type(4) {
+    grid-column: 2 / 4;
+    grid-row: span 1;
+  }
+}
+
+@media (width >= 1024px) {
+  .content-section:nth-child(2) .article-list{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+  }
+
+  .content-section:nth-child(2n + 1) {
+    grid-template-columns: fit-content(240px) 2fr; /* фит контент для переноса слов, согласно макету */
+  }
+}
+
 .footer {
   block-size: 100vh;
-  min-block-size: 667px;
+  min-block-size: 668px;
   display: grid;
   place-items: center;
   position: relative;
