--- a/styles/variables.css
+++ b/styles/variables.css
@@ -3,11 +3,13 @@
   и их переопределение под различные устройства
 */
 
-
 :root {
   --bg-image: url(../images/cover-image-dark.png);
   --bg-color: #000028;
   --accent-color: #FF0070;
   --title-decor: #DB00FF;
-  --text-color: #F1B2CE; 
+  --text-color: #F1B2CE;
+  --title-text-color: #000028;
+  --section-title-color: #FF0070;
+  --corner-color: #FF0070;
 }
