--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
   background-attachment: fixed;
   background-color: var(--bg-color);
   font-size: 18px;
-  font-family: 'IBM Plex mono';
+  font-family: "IBM Plex mono";
   min-block-size: 100vh;
   padding-inline: 10px;
 }
@@ -27,7 +27,7 @@
   justify-content: flex-end;
 }
 
-.header__theme-menu-list{
+.header__theme-menu-list {
   display: flex;
   gap: 10px;
   flex-direction: column;
@@ -50,6 +50,20 @@
 
 .header__theme-menu-button_active {
   border: 1px solid var(--corner-color);
+  pointer-events: none;
+}
+
+.header__theme-menu-button:hover {
+  outline: 1px solid var(--corner-color, rgb(255 0 112/ 0.4));
+}
+
+
+.header__theme-menu-button:focus {
+  outline: none;
+}
+
+.header__theme-menu-button:focus-visible {
+  border-bottom: 1px solid currentColor;
 }
 
 .header__title {
@@ -98,7 +112,7 @@
 }
 
 .rec::after {
-  content: '';
+  content: "";
   display: inline-block;
   width: 0.5em;
   height: 0.5em;
@@ -108,7 +122,8 @@
   box-shadow: 0 0 4px 2px var(--accent-color);
 }
 
-.theme-light .rec { /*скрываем надпись в светлой теме*/
+.theme-light .rec {
+  /*скрываем надпись в светлой теме*/
   display: none;
 }
 
@@ -119,7 +134,7 @@
 }
 
 .corner::before {
-  content: '';
+  content: "";
   position: absolute;
   inline-size: 100%;
   block-size: 100%;
@@ -131,7 +146,7 @@
   inset-inline-end: 0px;
 }
 
-.corner__top-right::before{
+.corner__top-right::before {
   border-bottom: none;
   border-left: none;
 }
@@ -146,19 +161,24 @@
   border-right: none;
 }
 
-@media (width >= 768px) { /* Медиазапросы для хедера 768px*/
+@media (width >= 768px) {
+  /* Медиазапросы для хедера 768px*/
   .page {
     padding-inline: 20px;
   }
 
-  .header__title {
+  .title__clamp {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__title {
     margin-left: -20px; /* Компенсируем отступ от page*/
   }
 
   .header__subtitle-wrapper {
-    inline-size: min(100%, 364px);
+    inline-size: clamp(355px, 47.5vw, 491px); /* Подгонка под макет для адаптивности текста */
     justify-self: end;
+    margin-block-end: 20px;
   }
 
   .rec {
@@ -174,11 +194,10 @@
     inset-block-end: 20px;
     inset-inline-start: 0px;
   }
-
 }
 
-
-@media (width >= 1024px) { /* Медиазапросы для хедера 1024px*/
+@media (width >= 1024px) {
+  /* Медиазапросы для хедера 1024px*/
   .header__theme-menu {
     justify-content: center;
     align-items: flex-start;
@@ -191,7 +210,7 @@
 }
 
 .content-section:first-child {
-  margin-block-start: 40px; 
+  margin-block-start: 60px;
 }
 
 .content-section:not(:first-child) {
@@ -274,7 +293,8 @@
   object-fit: cover;
 }
 
-@media (width >= 768px) { /* Медиазапросы для мейна 768px*/
+@media (width >= 768px) {
+  /* Медиазапросы для мейна 768px*/
   .content-section:nth-child(2n + 1) {
     display: grid;
     grid-template-columns: fit-content(200px) 2fr; /* фит контент для переноса слов, согласно макету */
@@ -282,7 +302,7 @@
   }
 
   .content-section_title {
-    width: clamp(200px, 25vw, 240px); /* Ограничеваем ширину слов для совпадения переноса слов с макетом */
+    inline-size: clamp(235px, 30vw, 320px); /* Ограничеваем ширину блока для совпадения переноса слов с макетом */
   }
 
   .heading__gallery {
@@ -291,18 +311,17 @@
 
   .gallery {
     grid-template-columns: 1fr 1fr 1fr;
-    /* grid-template-rows: repeat(3, 1fr); */
     grid-auto-flow: dense;
   }
 
-.gallery img:nth-of-type(1) {
-    grid-column: span 2;   
+  .gallery img:nth-of-type(1) {
+    grid-column: span 2;
     grid-row: 1 / 2;
   }
 
   .gallery img:nth-of-type(2) {
     grid-column: 3;
-    grid-row: span 2; 
+    grid-row: span 2;
   }
 
   .gallery img:nth-of-type(3) {
@@ -316,7 +335,7 @@
 }
 
 @media (width >= 1024px) {
-  .content-section:nth-child(2) .article-list{
+  .content-section:nth-child(2) .article-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 20px;
