--- a/styles/style.css
+++ b/styles/style.css
@@ -333,6 +333,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-flow: dense;
     margin-block-end: 60px;
+    gap: 20px;
   }
 
   .gallery img:nth-of-type(1) {
