--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,14 +9,11 @@
 body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
-  margin: 0;
-  padding: 0;
 }
 
-.page {
-  margin: 0;
-  padding: 0;
-} 
+/* .page {
+  margin: 0 auto;
+}  */
 
 h1,
 h2,
