браузерные отступы test 4

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -12,4 +12,5 @@
   --title-text-color: #000028;
   --section-title-color: #FF0070;
   --corner-color: #FF0070;
+  --accent-color-opacity: rgba(255 0 112 / 40%);
 }
