--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,19 +1,16 @@
 /* Глобальные стили для проекта, их можно дополнять и менять по желанию */
-
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
 }
-
-/* .page {
-  margin: 0 auto;
-}  */
 
 h1,
 h2,
