--- a/styles/light.css
+++ b/styles/light.css
@@ -17,6 +17,7 @@
   --title-text-color: #353430;
   --section-title-color: #353430;
   --corner-color: #353430;
+  --accent-color-opacity: rgba(50 49 45 / 0.4);
 }
 
 @media (prefers-color-scheme: light) {
@@ -29,6 +30,7 @@
   --title-text-color: #353430;
   --section-title-color: #353430;
   --corner-color: #353430;
+  --accent-color-opacity: rgba(50 49 45 / 0.4);
   }
 
   .rec {
