--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,11 @@
   font-size: 18px;
   font-family: "IBM Plex mono";
   min-block-size: 100vh;
-  padding-inline: 10px;
 }
+
+.header, .content-section, .footer {
+  margin: 0 10px;
+} 
 
 @supports (block-size: 100dvb) {
   .header {
@@ -63,7 +66,7 @@
 }
 
 .header__theme-menu-button:hover {
-  outline: 1px solid var(--corner-color, rgb(255 0 112/ 0.4));
+  outline: 1px solid var(--accent-color-opacity);
 }
 
 
@@ -172,8 +175,8 @@
 
 @media (width >= 768px) {
   /* Медиазапросы для хедера 768px*/
-  .page {
-    padding-inline: 20px;
+  .header, .content-section, .footer {
+    margin: 0 20px;
   }
 
   .title__clamp {
