--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,12 @@
 body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
+  margin-inline: auto;
 }
+
+/* .header, .content-section, .footer {
+  margin: 0 auto;
+} */
 
 h1,
 h2,
