--- a/styles/light.css
+++ b/styles/light.css
@@ -20,6 +20,10 @@
   --accent-color-opacity: rgba(50 49 45 / 0.4);
 }
 
+.theme-light .rec {
+  display: none;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
   --bg-image: url(../images/cover-image-light.png);
@@ -33,7 +37,7 @@
   --accent-color-opacity: rgba(50 49 45 / 0.4);
   }
 
-  .rec {
+  .theme-auto .rec {
     display: none;
   }
 }
